--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@ progressBar.addEventListener("click", (e) => {
   :root {
     --bpm: 134;
     --sec-per-beat: calc(60s / var(--bpm));
+    --ui-scale-factor: 1.5;
   }
     @keyframes throw {
       25% {
@@ -292,7 +293,7 @@ progressBar.addEventListener("click", (e) => {
     }
     @keyframes bounce {
       50% {
-        transform: translateY(20px) rotateX(18deg) rotateY(21deg) rotateZ(-29deg);
+        transform: translateY(20px) rotateX(18deg) rotateY(21deg) rotateZ(-29deg) scale(var(--ui-scale-factor));
       }
     }
     body::before {
@@ -320,9 +321,10 @@ progressBar.addEventListener("click", (e) => {
 
     .deck-position {
         position: absolute;
-        top: 400px;
+        top: 40vh;
         left: 40%;
-        transform: rotateX(18deg) rotateY(21deg) rotateZ(-29deg);
+        transform-origin: top;
+        transform: rotateX(18deg) rotateY(21deg) rotateZ(-29deg) scale(var(--ui-scale-factor));
         transform-style: preserve-3d;
         animation: bounce var(--sec-per-beat) ease-in-out infinite;
         animation-delay: 0.25s;
@@ -431,13 +433,15 @@ progressBar.addEventListener("click", (e) => {
     }
 
     #header {
-      font-size: 7em;
+      font-size: 3em;
       position: absolute;
       top: 50px;
       font-family: 'Lobster Two', fantasy;
       background-color: rgb(0, 0, 0, .5);
       padding: 15px;
       color: rgb(197, 32, 32);
+      transform-origin: top left;
+      transform: scale(var(--ui-scale-factor));
     }
     #header > a {
       vertical-align: middle;
@@ -449,15 +453,11 @@ progressBar.addEventListener("click", (e) => {
     #header > a:hover {
       color: rgb(233, 38, 38);
     }
-    #volume {
-      width: 300px;
-    }
     #volume-slider {
       vertical-align: middle;
       accent-color: rgb(233, 38, 38);
       width: 150px;
       transform-origin: center right;
-      transform: scale(2);
     }
     #playback-progress {
       position: fixed;
