--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ var progressBar = document.querySelector("#playback-progress");
 var isSeeking = false;
 
 const player = new Player({
-  app: { token: "" },
+  app: { token: "WuB54VLp8mEZjQZC" },
   mediaElement: document.querySelector("#media"),
   mediaBannerPosition: "bottom left"
 });
